--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #222831;
+    background-color: #2a2231;
     user-select: none;
 }
 
